fix portlet on IE6

--- a/web/eXoResources/src/main/webapp/skin/DefaultSkin/webui/component/UIPopup/UIWindow/Stylesheet.css
+++ b/web/eXoResources/src/main/webapp/skin/DefaultSkin/webui/component/UIPopup/UIWindow/Stylesheet.css
@@ -1,11 +1,6 @@
 /*##########################################################*/
 .UIWindow .UIApplication {
-	_width: 99.6%;
 	overflow: auto;
-	/*
-	minh.js.exo
-	fix bug min-width in IE6 for portlets. 
-	*/
 }
 
 /*##########################################################*/
