--- a/web/eXoSkinMac/src/main/webapp/skin/MacSkin/webui/component/UIPopup/UIWindow/Stylesheet.css
+++ b/web/eXoSkinMac/src/main/webapp/skin/MacSkin/webui/component/UIPopup/UIWindow/Stylesheet.css
@@ -9,12 +9,7 @@
  }
 
 .UIWindow .UIApplication {
-		_width: 99.6%;
 	overflow: auto;
-	/*
-	minh.js.exo
-	fix bug min-width in IE6 for portlets. 
-	*/
 }
 
 /**************************** UIPageBody ************************************/
